alignment and position fixing

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ section {
 
     .checks-bottom {
         right: 8vw;
-        top: 85vh;
+        top: 90vh;
     }
 
     .heading-wrapper {
@@ -204,7 +204,15 @@ section {
     }
 
     .landing-bottom {
-        top: 80vh;
+        top: 85vh;
+    }
+
+    #content {
+        padding-top: 0;
+    }
+
+    #content h1 {
+        margin-top: 0;
     }
 
     .scroll-text {
@@ -220,9 +228,6 @@ section {
     section {
         padding: 5vw;
     }
-
-    
-
     .about-content {
         position: relative;
         font-size: 1rem;
